--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <!--Body-->
   <body>
     <!--Header-->
     <header class="page-header">
@@ -59,11 +58,17 @@
             </li>
           </ul>
         </address>
+
+        <button class="btn-burger" type="button">
+          <svg class="icon-burger" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
     <main>
-      <!--Section 1-->
+      <!--Hero-->
       <section class="hero">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
@@ -71,7 +76,7 @@
         </div>
       </section>
 
-      <!--Section 2-->
+      <!--Advantages-->
       <section class="advantages">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
@@ -148,7 +153,7 @@
         </div>
       </section>
 
-      <!--Section 3-->
+      <!--Team-->
       <section class="team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
@@ -156,6 +161,10 @@
             <li class="team-list-item">
               <img
                 class="team-list-img"
+                srcset="
+                  ./images/team/team-1-min.jpg    1x,
+                  ./images/team/team@2x-1-min.jpg 2x
+                "
                 src="./images/web-study-photo-1/img-1.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -215,6 +224,10 @@
             <li class="team-list-item">
               <img
                 class="team-list-img"
+                srcset="
+                  ./images/team/team-2-min.jpg    1x,
+                  ./images/team/team@2x-2-min.jpg 2x
+                "
                 src="./images/web-study-photo-1/img-2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -274,6 +287,10 @@
             <li class="team-list-item">
               <img
                 class="team-list-img"
+                srcset="
+                  ./images/team/team-3-min.jpg    1x,
+                  ./images/team/team@2x-3-min.jpg 2x
+                "
                 src="./images/web-study-photo-1/img-3.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -284,9 +301,9 @@
                 <ul class="social-links">
                   <li class="social-items">
                     <a
+                      class="icons-team-links"
                       href="https://www.instagram.com/"
                       target="_blank"
-                      class="icons-team-links"
                     >
                       <svg class="team-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -333,6 +350,10 @@
             <li class="team-list-item">
               <img
                 class="team-list-img"
+                srcset="
+                  ./images/team/team-4-min.jpg    1x,
+                  ./images/team/team@2x-4-min.jpg 2x
+                "
                 src="./images/web-study-photo-1/img-4.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -392,20 +413,49 @@
         </div>
       </section>
 
-      <!--Section 4-->
+      <!--Portfolio-->
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-section">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-img"
-                  src="./images/web-studio-2/img.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-1@2x-min.jpg 2x
+                    "
+                    width="360"
+                    height="300"
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-tab-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-tab-1@2x-min.jpg 2x
+                    "
+                    width="356"
+                    height="300"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-1-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-1@2x-min.jpg 2x
+                    "
+                    width="288"
+                    height="280"
+                  />
+                  <img
+                    src="./images/web-studio-2/img.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="overlay-pag">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -420,13 +470,42 @@
 
             <li class="portfolio-item">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-img"
-                  src="./images/web-studio-2/img-1.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-2@2x-min.jpg 2x
+                    "
+                    width="360"
+                    height="300"
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-lab-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-lab-2@2x-min.jpg 2x
+                    "
+                    width="356"
+                    height="300"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-2-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-2@2x-min.jpg 2x
+                    "
+                    width="288"
+                    height="280"
+                  />
+                  <img
+                    src="./images/web-studio-2/img-1.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="overlay-pag">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -441,13 +520,42 @@
 
             <li class="portfolio-item">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-img"
-                  src="./images/web-studio-2/img-2.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-3@2x-min.jpg 2x
+                    "
+                    width="360"
+                    height="300"
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-lab-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-lab-3@2x-min.jpg 2x
+                    "
+                    width="356"
+                    height="300"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-3-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-3@2x-min.jpg 2x
+                    "
+                    width="288"
+                    height="280"
+                  />
+                  <img
+                    src="./images/web-studio-2/img-2.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="overlay-pag">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -462,13 +570,42 @@
 
             <li class="portfolio-item">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-img"
-                  src="./images/web-studio-2/img-3.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-4@2x-min.jpg 2x
+                    "
+                    width="360"
+                    height="300"
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-lab-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-lab-4@2x-min.jpg 2x
+                    "
+                    width="356"
+                    height="300"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-4-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-4@2x-min.jpg 2x
+                    "
+                    width="288"
+                    height="280"
+                  />
+                  <img
+                    src="./images/web-studio-2/img-3.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="overlay-pag">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -483,13 +620,42 @@
 
             <li class="portfolio-item">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-img"
-                  src="./images/web-studio-2/img-4.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-5@2x-min.jpg 2x
+                    "
+                    width="360"
+                    height="300"
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-lab-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-lab-5@2x-min.jpg 2x
+                    "
+                    width="356"
+                    height="300"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-5-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-5@2x-min.jpg 2x
+                    "
+                    width="288"
+                    height="280"
+                  />
+                  <img
+                    src="./images/web-studio-2/img-4.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="overlay-pag">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -504,13 +670,42 @@
 
             <li class="portfolio-item">
               <div class="portfolio-container">
-                <img
-                  class="portfolio-img"
-                  src="./images/web-studio-2/img-5.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/portfolio/portfolio-desk-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-desk-6@2x-min.jpg 2x
+                    "
+                    width="360"
+                    height="300"
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/portfolio/portfolio-lab-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-lab-6@2x-min.jpg 2x
+                    "
+                    width="356"
+                    height="300"
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/portfolio/portfolio-mob-6-min.jpg    1x,
+                      ./images/portfolio/portfolio-mob-6@2x-min.jpg 2x
+                    "
+                    width="288"
+                    height="280"
+                  />
+                  <img
+                    src="./images/web-studio-2/img-5.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                </picture>
+
                 <p class="overlay-pag">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -545,9 +740,9 @@
           <ul class="footer-list-icons">
             <li class="footer-item-icons">
               <a
+                class="footer-social-links"
                 href="https://www.instagram.com/"
                 target="_blank"
-                class="footer-social-links"
               >
                 <svg class="footer-social-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
@@ -616,7 +811,7 @@
     </footer>
 
     <!--Backdrop-->
-    <div class="backdrop is-open">
+    <div class="backdrop is-open hidden">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-btn-icons" width="8" height="8">
@@ -629,7 +824,7 @@
 
         <form class="rewiev-form">
           <div class="rewiev-form-field-wrapper">
-            <label for="user-name" class="rewiev-form-label">Name</label>
+            <label class="rewiev-form-label" for="user-name">Name</label>
             <div class="rewiev-form-input-wrapper">
               <input
                 class="rewiev-form-input"
@@ -676,7 +871,7 @@
             </div>
           </div>
 
-          <div class="rewiev-form-field-wrapper rewiev-comment-wrapper">
+          <div class="rewiev-form-field-wrapper">
             <label class="rewiev-form-label" for="user-comment">Comment</label>
             <textarea
               class="rewiev-form-message"
@@ -713,6 +908,81 @@
 
           <button class="rewiev-form-submit" type="submit">Send</button>
         </form>
+      </div>
+    </div>
+
+    <!--Mobile menu-->
+    <div class="mobile-menu is-open">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-close-btn" type="button">
+          <svg class="mobile-menu-close-btn-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-nav">
+          <ul class="mobile-menu-list">
+            <li class="mobile-menu-list-item">
+              <a href="" class="mobile-menu-list-link accent-color">Studio</a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a href="" class="mobile-menu-list-link">Portfolio</a>
+            </li>
+            <li class="mobile-menu-list-item">
+              <a href="" class="mobile-menu-list-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="mobile-menu-address">
+          <ul class="mobile-menu-address-list">
+            <li class="mobile-menu-address-item">
+              <a
+                class="mobile-menu-address-link accent-color"
+                href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mobile-menu-address-item">
+              <a
+                class="mobile-menu-address-link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="mobile-menu-social-list">
+          <li class="mobile-menu-social-item">
+            <a
+              class="mobile-menu-social-link"
+              href="https://www.instagram.com/"
+            >
+              <svg class="mobile-menu-social-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-menu-social-item">
+            <a class="mobile-menu-social-link" href="https://twitter.com/">
+              <svg class="mobile-menu-social-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-menu-social-item">
+            <a class="mobile-menu-social-link" href="https://www.facebook.com/">
+              <svg class="mobile-menu-social-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-menu-social-item">
+            <a class="mobile-menu-social-link" href="https://www.linkedin.com/">
+              <svg class="mobile-menu-social-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
